Improve rigor: add Laureys citation, Rosenthal distinctions, qualify claims

--- a/src/content/docs/foundations/01-what-is-consciousness.mdx
+++ b/src/content/docs/foundations/01-what-is-consciousness.mdx
@@ -35,15 +35,17 @@ Philosophers, following [Ned Block (1995)](https://doi.org/10.1017/S0140525X0003
 
 Block argues these can come apart: you might have phenomenal experience without access (experiencing more than you can report), or access without phenomenal experience (if that's possible—this is debated).
 
-[Rosenthal](https://doi.org/10.1093/acprof:oso/9780199838721.001.0001) adds another useful distinction:
+[Rosenthal](https://doi.org/10.1093/acprof:oso/9780199838721.001.0001) adds other useful distinctions:
 - **Creature consciousness**: Is the organism conscious at all?
 - **State consciousness**: Is this particular mental state conscious?
+- **Transitive consciousness**: Being conscious *of* something (a perception, a thought)
+- **Intransitive consciousness**: Being conscious simpliciter—awake rather than asleep or comatose
 
 **Self-consciousness** (awareness of oneself as a distinct individual) is typically treated as a *higher-order* or *reflexive* form of consciousness—not a basic type, but a special case where consciousness is directed at the self.
 
 ### Neuroscience: Two Dimensions
 
-Clinical neuroscience uses a different framework—two orthogonal *dimensions* rather than types:
+Clinical neuroscience uses a different framework—two orthogonal *dimensions* rather than types ([Laureys, 2005](https://doi.org/10.1016/S1474-4422(05)70167-2)):
 
 ```mermaid
 quadrantChart
@@ -79,7 +81,7 @@ Wakefulness (arousal) is *not* the same as consciousness (awareness). You can be
 
 ## The Core Question
 
-When scientists study consciousness, they're primarily interested in **phenomenal consciousness**: why and how there is subjective experience at all.
+When philosophers and scientists study consciousness, many are particularly puzzled by **phenomenal consciousness**: why and how there is subjective experience at all. (Though some researchers focus more on access consciousness and its neural correlates, viewing phenomenal consciousness as less tractable or even illusory.)
 
 Consider a thought experiment: Imagine a robot that processes visual information, navigates the world, and reports on what it "sees." Is there something it's like to *be* that robot? Does it have visual experiences, or is it just processing data in the dark?
 
